<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="login_detail">By signing in you are agreeing\n our Term and privacy policy</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="nama">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="no_telp">No. Telp</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_changes">Save Changes</string>
    <string name="order">Order</string>
</resources>