<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frag_register">

    <EditText
        android:id="@+id/edtemailregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="10dp"
        app:layout_constraintWidth_percent="0.80"/>

    <EditText
        android:id="@+id/edtpassregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtemailregister"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        app:layout_constraintWidth_percent="0.80" />

    <ImageView
        android:id="@+id/seepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="@+id/edtpassregister"
        app:layout_constraintEnd_toEndOf="@+id/edtpassregister"
        app:layout_constraintTop_toTopOf="@+id/edtpassregister"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/edtnama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/profile"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpassregister"
        app:layout_constraintWidth_percent="0.80" />

    <EditText
        android:id="@+id/edtalamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="text"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtnama"
        app:layout_constraintWidth_percent="0.80" />

    <EditText
        android:id="@+id/edttelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/no_telp"
        android:inputType="phone"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtalamat"
        app:layout_constraintWidth_percent="0.80" />

    <EditText
        android:id="@+id/edttgllahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tgl_lahir"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttelp"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/orange"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@+id/edttgllahir" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>