<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_profile">

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btnbackprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:paddingHorizontal="15dp"
                    android:text="Edit Profile"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editnama"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawableLeft="@drawable/profile"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/nama"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintWidth_percent="0.80" />

                <EditText
                    android:id="@+id/editalamat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/location"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/alamat"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editnama"
                    app:layout_constraintWidth_percent="0.80" />

                <EditText
                    android:id="@+id/editnotelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/no_telp"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editalamat"
                    app:layout_constraintWidth_percent="0.80" />

                <EditText
                    android:id="@+id/edittgllahir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/tgl_lahir"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editnotelp"
                    app:layout_constraintWidth_percent="0.80" />

                <Button
                    android:id="@+id/submitedit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/save_changes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittgllahir"
                    app:layout_constraintWidth_percent="0.80" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarEdit"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView6"
        app:layout_constraintStart_toStartOf="@+id/scrollView6"
        app:layout_constraintTop_toTopOf="@+id/scrollView6" />

</androidx.constraintlayout.widget.ConstraintLayout>